force-app/main/default/objects/Activity/fields/wk_exo__Agent__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>[Deprecated] Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>