force-app/main/default/objects/Activity/fields/wk_exo__call_recording_url__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__call_recording_url__c</fullName>
    <label>Exotel: Call Recording URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>