force-app/main/default/objects/Activity/fields/wk_exo__call_sid__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__call_sid__c</fullName>
    <externalId>true</externalId>
    <label>Exotel: Call Sid</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>