force-app/main/default/objects/Activity/fields/wk_exo__call_start_time__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__call_start_time__c</fullName>
    <inlineHelpText>This field will not populated in inbound missed call.</inlineHelpText>
    <label>Exotel: Call Start Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>