force-app/main/default/objects/Activity/fields/wk_exo__Clone_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Clone_Phone_No__c</fullName>
    <label>Mask Phone No</label>
    <type>Phone</type>
</CustomField>