force-app/main/default/objects/Activity/fields/wk_exo__Exotel_Call__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Exotel_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exotel Call Detail</label>
    <referenceTo>wk_exo__Exotel_Call__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>