force-app/main/default/objects/Activity/fields/wk_exo__exotel_status__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__exotel_status__c</fullName>
    <label>Exotel: Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>