force-app/main/default/objects/Activity/fields/wk_exo__PopUp__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__PopUp__c</fullName>
    <label>PopUp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>