force-app/main/default/objects/Activity/fields/wk_exo__Total_Talk_Time__c.field-meta.xml
<CustomField>
    <fullName>wk_exo__Total_Talk_Time__c</fullName>
    <label>Exotel: Conversation Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>